add babel polyfill

--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
       "node": true
     },
     "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
+      "ecmaVersion": 6,
+      "sourceType": "module"
     },
     "rules": {
-        "semi": 2
+      "semi": 2
     }
   },
   "homepage": "https://github.com/wbkd/yet-another-webpack-es6-starterkit#readme",
@@ -51,5 +51,8 @@
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.5.0"
   }
 }
