--- a/package.json
+++ b/package.json
@@ -36,16 +36,11 @@
       "semi": 2
     }
   },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
   "homepage": "https://github.com/wbkd/webpack-starter#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
