--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
-    "core-js": "^3.0.1"
+    "core-js": "^3.0.1",
+    "knex": "^0.18.1",
+    "objective": "0.0.40",
+    "pg": "^7.11.0",
+    "pryjs": "^1.0.3"
   }
 }
