--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,18 @@
-{
+module.exports = {
   "env": {
-    "browser": true,
-    "node": true
+      "browser": true,
+      "es6": true
+  },
+  "extends": "eslint:recommended",
+  "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module"
+      "ecmaVersion": 2018,
+      "sourceType": "module"
   },
   "rules": {
     "semi": 2
   }
-}
+};
