--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint:styles": "stylelint src",
     "lint:scripts": "eslint src",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
-    "start": "webpack serve --config webpack/webpack.config.dev.js"
+    "start": "webpack serve --config webpack/webpack.config.dev.js",
+    "update": "ncu -u",
+    "sort": "sort-package-json"
   },
   "repository": {
     "type": "git",
@@ -44,8 +46,10 @@
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.2",
     "node-sass": "^5.0.0",
+    "npm-check-updates": "^11.8.3",
     "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
+    "sort-package-json": "^1.50.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
