--- a/package.json
+++ b/package.json
@@ -20,13 +20,24 @@
   "license": "MIT",
   "author": "webkid.io",
   "scripts": {
-    "lint": "yarn lint:styles && yarn lint:scripts",
-    "lint:styles": "stylelint src",
-    "lint:scripts": "eslint src",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
+    "lint": "yarn lint:styles && yarn lint:scripts",
+    "lint:scripts": "eslint --cache --fix",
+    "lint:styles": "stylelint --fix",
+    "prepare": "husky install",
     "start": "webpack serve --config webpack/webpack.config.dev.js",
-    "update": "ncu -u",
-    "sort": "sort-package-json"
+    "sort": "sort-package-json",
+    "update": "ncu -u"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "yarn lint:scripts",
+    "*.css": "yarn lint:styles",
+    "package.json": "sort-package-json"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -50,6 +61,8 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
     "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
     "npm-check-updates": "^11.8.3",
