--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "lint-staged": {
     "*.js": "yarn lint:scripts",
     "*.css": "yarn lint:styles",
+    "*.sass": "yarn lint:styles",
+    "*.scss": "yarn lint:styles",
     "package.json": "sort-package-json"
   },
   "dependencies": {
