--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "@babel/plugin-proposal-class-properties": "^7.16.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.5.4",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.2.0",
     "eslint-webpack-plugin": "^3.1.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.1",
