--- a/package.json
+++ b/package.json
@@ -27,38 +27,37 @@
     "url": "https://github.com/wbkd/webpack-starter/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/eslint-parser": "^7.5.4",
+    "@babel/preset-env": "^7.16.8",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^10.2.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
-    "eslint": "^8.2.0",
-    "eslint-webpack-plugin": "^3.1.0",
+    "eslint": "^8.7.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "html-loader": "^3.0.1",
+    "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.4",
-    "node-sass": "^6.0.1",
-    "postcss-loader": "^6.2.0",
-    "postcss-preset-env": "^6.7.0",
-    "sass-loader": "^12.3.0",
+    "mini-css-extract-plugin": "^2.5.1",
+    "node-sass": "^7.0.1",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.2.3",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.0.1",
-    "stylelint-config-standard": "^23.0.0",
-    "stylelint-webpack-plugin": "^3.1.0",
-    "webpack": "^5.62.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-webpack-plugin": "^3.1.1",
+    "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
+    "webpack-dev-server": "^4.7.3",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "core-js": "^3.19.1",
-    "d3": "^7.1.1"
+    "core-js": "^3.20.3"
   }
 }
