refactor: optimize webpack config and template using modern bundler plugin

--- a/package.json
+++ b/package.json
@@ -39,15 +39,11 @@
     "css-loader": "^6.7.2",
     "eslint": "^8.28.0",
     "eslint-webpack-plugin": "^3.2.0",
-    "file-loader": "^6.2.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.1",
+    "html-bundler-webpack-plugin": "^1.6.5",
     "node-sass": "^8.0.0",
     "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^7.8.3",
     "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
     "stylelint": "^14.15.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-webpack-plugin": "^3.3.0",
